--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,61 @@
 .card {
   max-width: 1020px;
   margin-inline: auto;
-  background-color: #f2f2f2;
-  margin-top: 30px;
+  background-color: #fff;
   padding: 12px;
+  border-radius: 6px;
+  position: relative;
+}
+.table {
+  display: block;
+  overflow-x: auto;
+}
+.table-header-group {
+  display: table-header-group;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+.table-row-group {
+  display: table-row-group;
+}
+.table-caption {
+  display: table-caption;
+  margin-bottom: 8px;
+}
+.table-row {
+  display: table-row;
+}
+.table-cell {
+  display: table-cell;
+  padding: 8px 16px;
+  border-bottom: 1px solid #ddd;
+}
+.bar-menu {
+  position: absolute;
+  right: 10px;
+  top: 0;
+  font-size: 32px;
+  cursor: pointer;
+}
+.side-menu {
+  position: absolute;
+  right: 40px;
+  top: -20px;
+  padding: 12px;
+  background-color: #fff;
+  box-shadow: -2px 2px 5px 0px #00000040;
+  text-transform: capitalize;
+}
+.side-menu input {
+  margin: 10px;
+}
+.side-menu span {
+  font-size: 12px;
+}
+
+@media (max-width: 768px) {
+  .card {
+    max-width: 90vw;
+    padding: 8px;
+  }
 }
