--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,20 @@
 }
 body {
   min-height: 100vh;
+  display: grid;
+  place-items: center;
+  background-color: #f2f2f2;
 }
-
+button {
+  background-color: #1818dab7;
+  color: #fff;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 6px;
+}
+select {
+  padding: 6px;
+  outline: none;
+  background-color: #508b2d;
+  color: #fff;
+}
